   how the original construction could be problematic. 

* AIC calculation modified for non-Gaussian families with a scale parameter, 
  so that the model estimated scale parameter is used, rather than the 
  deviance estimator employed with glm exponential families. This matters for 
  avoiding substantial bias with very low mean count data (particulalry 'tw' 
  and 'Tweedie' families).   

* prediction on response scale could fail for models fitted by 
  bam(...,discrete=TRUE) - fixed. 

* bug fix to multi-model anova.gam code to deal properly with extended family 
  scale parameters (still not the recommended way of testing!)

1.8-35

* Fix to bug in Fletcher scale parameter estimate with weighted data (e.g. 
  quasibinomial with n>1). Gaussian case not affected. Thanks to John 
  Maindonald.

* Italian translation updated thanks to Daniele Medri

* German translation updated thanks to Detlef Steuer

* French translation updated thanks to Philippe Grosjean

* gumbls initialization improved.

* Modification so that smooths can insist on not being reparameterized when 
  called using default bam methods, by having a 'repara' element set to FALSE 
  in the object returned by the smooth constructor.

* Modification so that smooths can have the summation convention for matrix
  arguments turned off, by having an 'xt$sumConv' element set to FALSE in the 
  'xt' argument of 's'.

1.8-34

* 'gam.mh' proposal df typo fix and help file '%*%' -> '\%*\*' fix. Thanks 
   Len Thomas.

* various random number generation calls in rd functions in families could 
  fail if simulating one point - fixed.

* gp smooths can now be specified to be strictly stationary (see ?gp.smooth)

* fix to predict.bamd bug in handling fixed effect contrasts (wrong contrast 
  could be used for prediction, if non-default used in fitting). Thanks to
  Jalal Al-Tamimi.

* predict.bamd modified to catch case where all prediction data is NA

* predict.gam modified to allow NA to be a factor level.
