@@ -1808,9 +1808,9 @@ ziP <- function (theta = NULL, link = "identity",b=0) {
     fv <- list(p*mu)    ## E(y)    
     if (is.null(se)) return(fv) else {
       dp.dg <- p  
-      ind <- eta < log(.Machine$double.xmax)/2
-      dp.dg[!ind] <- 0
-      dp.dg <- exp(-et)*et*exp(theta[2])
+      # ind <- eta < log(.Machine$double.xmax)/2
+      # dp.dg[!ind] <- 0
+      dp.dg <- exp(-et)*et*(b + exp(theta[2]))
       dmu.dg <- (lambda + 1)*mu - mu^2
       fv[[2]] <- abs(dp.dg*mu+dmu.dg*p)*se   
       names(fv) <- c("fit","se.fit")
